@@ -1,17 +1,0 @@
-[[!comment format=mdwn
- username="http://joey.kitenet.net/"
- nickname="joey"
- subject="comment 2"
- date="2011-03-23T15:18:29Z"
- content="""
-Because I haven't learned Cabal yet.
-
-But also because I've had bad experiences with both a) tying a particular program to a particular language's pet build system and then having to add ugliness when I later need to do something in the build that has nothing to do with that language and b) as a user, needing to deal with the pet build systems of languages when I just need to make some small change to the build process that is trivial in a Makefile.
-
-With that said, I do have a configure program written in Haskell, so at least it doesn't use autotools. :)
-
-Update: I did try using cabal, but git-annex includes 3 programs, and they
-all link to a lot of git-annex modules, and cabal wanted to build nearly
-every module 3 times, which was too slow for me and I could not find a way
-around.
-"""]]
